--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @import url("https://fonts.googleapis.com/css2?family=Niramit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&display=swap");
+
+@layer base {
+  /* html {
+    font-family: "Niramit", sans-serif;
+  } */
+  html {
+    font-family: "IBM Plex Sans Thai", sans-serif;
+  }
+}
