--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,3 +13,13 @@
     font-family: "IBM Plex Sans Thai", sans-serif;
   }
 }
+
+/* CSS */
+.hidden {
+  display: none;
+}
+
+.modal-content {
+  width: 400px;
+}
+
